<resources>
    <string name="app_name">CalendarAgenda</string>
    <string name="rightArrow"><![CDATA[-->]]></string>
    <string name="leftArrow"><![CDATA[<--]]></string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
</resources>